--- a/features/dashboard/locales/en.json
+++ b/features/dashboard/locales/en.json
@@ -26,7 +26,7 @@
   "profile_mobile_summary_view": "Go to profile",
   "find_a_host": "Find a host",
   "become_a_host": "Become a host",
-  "browse_communities": "Browse Communities",
+  "browse_communities": "Browse communities",
   "search_input_label": "Where are you going?",
   "search_input_placeholder": "Search a location",
   "show_map": "Show Map",
