start profile i18n keys

--- a/features/profile/locales/en.json
+++ b/features/profile/locales/en.json
@@ -1,13 +1,91 @@
 {
-    "accepting": "Can host",
-    "maybe_accepting": "May host",
-    "not_accepting": "Can't host",
-    "meetup": "Wants to meet",
-    "maybe_meetup": "Open to meet",
+    "actions": {
+        "message_label": "Message",
+        "accept_friend_label": "Accept",
+        "decline_friend_label": "Decline"
+    },
+    "heading": {
+        "about_me": "About Me",
+        "age_gender": "Age / Gender",
+        "community_standing": "Community Standing",
+        "edit": "Edit",
+        "edit_profile": "Edit profile",
+        "education": "Education",
+        "home": "My Home",
+        "hometown": "Grew up in",
+        "hosting_status": "Hosting status",
+        "joined": "Coucher since",
+        "languages_conversational": "Conversational in",
+        "languages_fluent": "Fluent languages",
+        "last_active": "Last active",
+        "local_time": "Local time",
+        "occupation": "Occupation",
+        "references": "References"
+    },
+    "home_info_headings": {
+        "about_home": "About my home",
+        "general": "General",
+        "has_housemates": "Has housemates",
+        "host_drinking": "Drinks at home",
+        "host_kids": "Has children",
+        "host_pets": "Has pets",
+        "host_smoking": "Smokes at home",
+        "hosting_preferences": "Hosting Preferences",
+        "house_rules": "House rules",
+        "housemates": "Housemates",
+        "housemate_details": "Housemate details",
+        "kid_details": "Children details",
+        "last_minute": "Last-minute requests",
+        "local_area": "Local area information",
+        "max_guests": "Max # of guests",
+        "my_home": "My home",
+        "parking": "Parking available",
+        "parking_details": "Parking details",
+        "pet_details": "Pet details",
+        "sleeping_arrangement": "Sleeping arrangement",
+        "space": "Private / shared space",
+        "transportation": "Transportation, Parking, Accessibility",
+        "wheelchair": "Wheelchair accessible",
+        "other_info": "Additional information"
+    },
+    "edit_home_questions": {
+        "accept_drinking": "Accept drinking",
+        "accept_pets": "Accept pets",
+        "accept_smoking": "Accept smoking",
+        "accept_kids": "Accept children",
+        "accept_camping": "Accept Camping"
+    },
+    "unspecified_info": "Ask me",
+    "smoking_location": {
+        "no": "No",
+        "outside": "Outside",
+        "window": "Window",
+        "yes": "Yes"
+    },
+    "hosting_status": {
+        "can_host": "Can host",
+        "maybe": "May host",
+        "cant_host": "Can't host"
+    },
+    "meetup_status": {
+        "wants_to_meetup": "Wants to meet",
+        "open_to_meetup": "Open to meet",
+        "does_not_want_to_meetup": "Can't meet"
+    },
+    "sleeping_arrangement": {
+        "private": "Private",
+        "common": "Common",
+        "shared_room": "Shared room",
+        "shared_space": "Shared space"
+    },
+    "parking_details": {
+        "free_onsite": "Free onsite parking",
+        "free_offsite": "Free offsite parking",
+        "paid_onsite": "Paid onsite parking",
+        "paid_offsite": "Paid offsite parking"
+    },
     "my_connections": "My connections",
     "connection_pending": "Pending",
-    "no_meetup": "Can't meet",
-    "unsure": "Ask me",
     "cancel": "Cancel",
     "more_profile_actions": "...",
     "more_profile_actions_a11y_text": "More profile actions",
@@ -15,9 +93,7 @@
     "report_reason": "Reason",
     "report_user": "Report this user",
     "send": "Send",
-    "accept_friend_action": "Accept",
     "accept_friend_label": "Accept friend request",
-    "decline_friend_action": "Decline",
     "decline_friend_label": "Decline friend request",
     "no_references": "No references of this kind yet!",
     "references_filter_a11y_label": "Show references: ",
@@ -64,7 +140,6 @@
     "was_appropriate_required": "To help us keep our community safe, this question is required.",
     "last_active_false": "Unknown",
     "languages_fluent_false": "Not given",
-    "message": "Message",
     "default_about_me_headings": "# Current mission\n<br>\ne.g. I want to meet people and learn...\n<br>\n# Why I use Couchers.org\n<br>\ne.g. I think couch surfing should be free...\n<br>\n# My favorite travel story\n<br>\ne.g. One time I...\n",
     "default_hobbies_headings": "# Art\n<br>\ne.g. Painting, ...\n<br>\n# Books\n<br>\neg. The Cat in the Hat, ...\n<br>\n# Movies\n<br>\ne.g. David Attenborough documentaries, ...\n<br>\n# Music\n<br>\ne.g. The Wiggles, ...\n<br>\n",
     "default_about_home_headings": "# What I can share with guests\n<br>\ne.g. I can share...\n<br>\n",
