--- a/features/profile/locales/en.json
+++ b/features/profile/locales/en.json
@@ -183,7 +183,7 @@
     "response_time_text_almost_all": "Usually in {{p33}} to {{p66}}",
     "unsaved_changes_warning": "You haven't saved your changes. Are you sure you want to leave the page?",
     "profile_tag_input": {
-        "header_text": "Press 'Enter' to add\n<1>Email us</1> to add a language",
+        "header_text": "Press 'Enter' to add\n<support_link>Email us</support_link> to add a language",
         "remove_button_a11y_text": "Remove {{tag}}"
     }
 }
