fix: friends and guest reference type labels swapped around
Closes #215

--- a/features/profile/locales/en.json
+++ b/features/profile/locales/en.json
@@ -155,7 +155,9 @@
     "reference_filter_label": {
         "friend": "From friends",
         "hosted": "From hosts",
-        "surfed": "From guests"
+        "surfed": "From guests",
+        "given": "Given to others",
+        "all": "All references"
     },
     "reference_badge_label": {
         "friend": "Friend",
