port basic account creation to backend v2 (#236)
* refactor account creation to use v2 /POST users endpoint

* address PR comments

* format and lint

* change empty password message

* cleanup imports

* fix error messages format

* add username field back to basic signup form

* use translation for password label

* fix error handling

* format

--- a/features/auth/locales/en.json
+++ b/features/auth/locales/en.json
@@ -82,15 +82,20 @@
     "tos_accept_label": "I Accept the Terms of Service."
   },
   "basic_form": {
-    "name": {
-      "field_label": "Your name",
-      "empty_error": "Please enter your name",
-      "required_error": "This field can't be empty."
+    "username": {
+      "field_label": "Username",
+      "empty_error": "Please enter a valid username",
+      "required_error": "Username can't be empty."
     },
     "email": {
       "field_label": "Email",
       "empty_error": "Please enter a valid email address",
       "required_error": "Email can't be empty."
+    },
+    "password": {
+      "field_label": "Password",
+      "empty_error": "Please enter a valid password",
+      "required_error": "Password can't be empty."
     }
   },
   "location": {
