--- a/features/auth/locales/en.json
+++ b/features/auth/locales/en.json
@@ -82,10 +82,10 @@
     "tos_accept_label": "I Accept the Terms of Service."
   },
   "basic_form": {
-    "username": {
-      "field_label": "Username",
-      "empty_error": "Please enter a valid username",
-      "required_error": "Username can't be empty."
+    "name": {
+      "field_label": "Name",
+      "empty_error": "Please enter your username",
+      "required_error": "Name can't be empty."
     },
     "email": {
       "field_label": "Email",
