fixed the error message when empty dates

--- a/features/profile/locales/en.json
+++ b/features/profile/locales/en.json
@@ -144,7 +144,9 @@
     "request_form": {
         "send_request": "Send {{name}} a request",
         "arrival_date": "Arrival Date",
+        "arrival_date_empty": "Please specify an arrival Date",
         "departure_date": "Departure Date",
+        "departure_date_empty": "Please specify a departure Date",
         "meetup_only": "Meet up only",
         "overnight_stay": "Overnight stay",
         "request": "Request",
